--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=14"
