--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.6.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "openai": "^3.3.0"
   },
   "engines": {
     "node": ">=14"
